# local-dev-jupyter

./: .gitignore  Untitled.ipynb  pyproject.toml  readme.md
notebooks/: minio-integration.ipynb
