[tool.poetry]
name = "local-dev-jupyter"
version = "0.1.0"
description = ""
authors = ["takatsugu.ishikawa"]

[tool.poetry.dependencies]
python = "3.7.6"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter-nbextensions-configurator = "^0.4.1"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
pandas = "^1.1.1"
xgboost = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
